# backend/src/routes/openapi.yaml
@@ -493,7 +493,47 @@ paths:
               schema:
                 $ref: "#/components/schemas/Message"
 
-  /crowdEvents/{id}/upvote:
+  /crowdEvents/{id}/voting:
+    delete:
+      tags: [CrowdEvents]
+      deprecated: false
+      description: Deletes the current user's voting for a crowd event
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: CrowdEvent ID
+      responses:
+        "200":
+          description: Vote deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: false
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+        "404":
+          description: no entry found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+
+  /crowdEvents/{id}/voting/up:
     post:
       tags: [CrowdEvents]
       deprecated: false
@@ -532,7 +572,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Message"
-  /crowdEvents/{id}/downvote:
+  /crowdEvents/{id}/voting/down:
     post:
       tags: [CrowdEvents]
       deprecated: false
